@@ -64,6 +64,10 @@ CVS code -
 	  generated by the NumLock glitch. (DLR)
   edit_refresh()
 	- Remove apparently unneeded leaveok() calls. (David Benbennick)
+  do_credits()
+	- Use napms() instead of nanosleep(), as it does the same thing
+	  (aside from taking an argument in milliseconds instead of
+	  microseconds) and curses includes it. (DLR)
 - nano.texi:
 	- Fix inaccuracies: Meta-L now toggles line wrapping, and Meta-<
 	  and Meta-> aren't toggles. (DLR)
